--- a/pages/about.html
+++ b/pages/about.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Rob</title>
-    <link rel="stylesheet" href="../assets/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./script.js" defer></script>
   </head>
   <body class="about">
     <header id="header-nav"></header>
     <div class="body-text">
       <h1 class="page-title">
-        When I'm not helping teams be productive while maintaing a healthy
-        work-life balance, I'm doing the following things.
+        This page will showcase some of the projects I am involved in. For now,
+        enjoy lorem ipsum!
       </h1>
-      <section class="about-section">
+      <section class="section">
         <h2 class="section-title">Cycling</h2>
         <div>
           <div class="image-left">
@@ -22,12 +23,10 @@
               alt="biking"
             />
           </div>
-          <div class="about-paragraph">
+          <div class="paragraph">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
+              I promise there is a (tiny) bit more original content on the
+              <a href="./portfolio.html">career</a> page
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
@@ -50,7 +49,7 @@
           </div>
         </div>
       </section>
-      <section class="about-section">
+      <section class="section">
         <h2 class="section-title">Cycling</h2>
         <div>
           <div class="image-right">
@@ -59,7 +58,7 @@
               alt="biking"
             />
           </div>
-          <div class="about-paragraph">
+          <div class="paragraph">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
               iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
@@ -87,7 +86,7 @@
           </div>
         </div>
       </section>
-      <section class="about-section">
+      <section class="section">
         <h2 class="section-title">Cycling</h2>
         <div>
           <div class="image-left">
@@ -96,7 +95,7 @@
               alt="biking"
             />
           </div>
-          <div class="about-paragraph">
+          <div class="paragraph">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
               iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
@@ -125,5 +124,6 @@
         </div>
       </section>
     </div>
+    <footer id="footer-nav"></footer>
   </body>
 </html>
