--- a/pages/index.html
+++ b/pages/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rob Chapleski</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./script.js" defer></script>
+  </head>
+  <body class="home">
     <header id="header-nav"></header>
-    <body></body>
-</body>
+    <div class="body-text">
+      <p>Hello!</p>
+      <p>Please enjoy this website displaying some of my personal content.</p>
+    </div>
+    <footer id="footer-nav"></footer>
+  </body>
 </html>
