--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,33 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rob's Portfolio</title>
-    <link rel="stylesheet" href="../assets/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./script.js" defer></script>
   </head>
   <body class="portfolio">
     <header id="header-nav"></header>
     <div class="body-text">
-      <h1 class="page-title">Things I've built, in no particular order</h1>
-      <section class="portfolio-section">
-        <h2 class="section-title">Cycling</h2>
+      <h1 class="page-title">I've Been Everywhere, Man...</h1>
+      <section class="section">
+        <h2 class="section-title">I help make things... better.</h2>
         <div class="section-div">
           <div class="image-right">
             <img
-              src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3169&q=80"
-              alt="nature"
+              src="https://i.ebayimg.com/images/g/g98AAOSwvsJjYJPi/s-l400.jpg"
+              alt="Inspected by tag"
             />
           </div>
           <div class="paragraph">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
+              I have a knack for detail and a perfectionistic urge to tinker.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
+              For the past two years, I have been working as a quality assurance
+              engineer and lead at Unqork, a no-code SaaS solution for many
+              Fortune50 companies. Seeing the code side of no-code makes me want
+              to learn more of the code side.
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
@@ -47,27 +45,25 @@
           </div>
         </div>
       </section>
-      <section class="portfolio-section">
-        <h2 class="section-title">Cycling</h2>
+      <section class="section">
+        <h2 class="section-title">I research.</h2>
         <div class="section-div">
           <div class="image-left">
             <img
-              src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3169&q=80"
-              alt="nature"
+              src="https://chemistry.anu.edu.au/sites/chemistry.sca-lws05.anu.edu.au/files/styles/band_2000_600_scale_crop/public/AdobeStock_320501642.jpeg?h=9c740905&itok=rgVc1nTE"
+              alt="Computational Chemistry"
             />
           </div>
           <div class="paragraph">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
+              I dig deeply and synthesize new ideas from unexpected sources.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
+              I have a Ph.D. in computational chemistry. Worked on some pretty
+              cool projects-- chemical warfare degradation, climate chemistry,
+              rare-earth mining-- and barely got my hands dirty. Building
+              accurate (enough) models of chemical processes in software
+              environments answers important questions about intense processes!
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
@@ -84,27 +80,24 @@
           </div>
         </div>
       </section>
-      <section class="portfolio-section">
-        <h2 class="section-title">Cycling</h2>
+      <section class="section">
+        <h2 class="section-title">I teach.</h2>
         <div class="section-div">
           <div class="about-image image-right">
             <img
-              src="https://images.unsplash.com/photo-1500622944204-b135684e99fd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3169&q=80"
-              alt="nature"
+              src="https://external-preview.redd.it/w2ITjCUqbrDDC2Q5B8M7rfPsHqQQFwDf5h6AK9NAb-s.jpg?auto=webp&s=fa78101f645556431840faaa14869fb8d9286495"
+              alt="Chemistry teacher doing a demonstration with fire."
             />
           </div>
           <div class="paragraph">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
+              I think nerdy things are cool and I like to show other people how
+              nerdy things are cool.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
+              I taught high school physics and chemistry for five years out of
+              undergrad. Also a teaching assistant in grad school, and mentored
+              undergrads as postdoc.
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
@@ -122,5 +115,6 @@
         </div>
       </section>
     </div>
+    <footer id="footer-nav"></footer>
   </body>
 </html>
