--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Rob</title>
-    <link rel="stylesheet" href="./styles.css" />
-    <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="../assets/styles.css" />
+    <script src="../assets/script.js" defer></script>
   </head>
   <body class="about">
     <header id="header-nav"></header>
