--- a/pages/header.html
+++ b/pages/header.html
@@ -1,8 +1,15 @@
-<div class="head-div">
-  <span class="name">Rob Chapleski</span>
-  <nav class="links">
+<div class="nav-container">
+  <div class="nav-box"></div>
+  <div class="nav-link">
     <a href="index.html">home</a>
+  </div>
+  <div class="nav-link">
     <a href="about.html">about</a>
+  </div>
+  <div class="nav-link">
     <a href="portfolio.html">career</a>
-  </nav>
+  </div>
+  <div class="nav-link">
+    <a href="contact.html">contact</a>
+  </div>
 </div>
