--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rob Chapleski</title>
+    <title>Best way to reach you?</title>
     <link rel="stylesheet" href="../assets/styles.css" />
     <link rel="stylesheet" href="../assets/header.css" />
     <script src="../assets/script.js" defer></script>
@@ -12,7 +12,7 @@
     <header id="header-nav"></header>
     <div class="body-text">
       <p>Hello!</p>
-      <p>Please enjoy this website displaying some of my personal content.</p>
+      <p>input will go here.... someday...</p>
     </div>
     <footer id="footer-nav"></footer>
   </body>
