--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rob's Portfolio</title>
     <link rel="stylesheet" href="../assets/styles.css" />
+    <link rel="stylesheet" href="../assets/header.css" />
     <script src="../assets/script.js" defer></script>
   </head>
   <body class="portfolio">
