temporarily restructuring folders and adding placeholder body pane

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,13 +6,14 @@
     <title>Rob Chapleski</title>
     <link rel="stylesheet" href="../assets/styles.css" />
     <link rel="stylesheet" href="../assets/header.css" />
+    <link rel="stylesheet" href="../assets/background-responsive.css" />
     <script src="../assets/script.js" defer></script>
   </head>
-  <body class="home">
+  <body>
+    <div id="background-responsive"></div>
     <header id="header-nav"></header>
-    <div class="body-text">
-      <p>Hello!</p>
-      <p>Please enjoy this website displaying some of my personal content.</p>
+    <div class="home body-container">
+      <div class="content-box"></div>
     </div>
     <footer id="footer-nav"></footer>
   </body>
