changing default font, updating header, integrating header to other pages

--- a/pages/header.html
+++ b/pages/header.html
@@ -1,15 +1,26 @@
 <div class="nav-container">
-  <div class="nav-box"></div>
-  <div class="nav-link">
-    <a href="index.html">home</a>
-  </div>
-  <div class="nav-link">
-    <a href="about.html">about</a>
-  </div>
-  <div class="nav-link">
-    <a href="portfolio.html">career</a>
-  </div>
-  <div class="nav-link">
-    <a href="contact.html">contact</a>
-  </div>
+  <a href="index.html" class="nav-link nav-link-static">
+    <div>
+      <i class="fa-solid fa-face-smile"></i>
+      <span class="nav-link-text">Rob Chapleski</span>
+    </div>
+  </a>
+  <a href="about.html" class="nav-link nav-link-dynamic">
+    <div>
+      <i class="fa-solid fa-person-rays" style="color: #0f380f"></i>
+      <span class="nav-link-text">about</span>
+    </div>
+  </a>
+  <a href="portfolio.html">
+    <div class="nav-link nav-link-dynamic">
+      <i class="fa-solid fa-book" style="color: #0f380f"></i>
+      <span class="nav-link-text">career</span>
+    </div>
+  </a>
+  <a href="contact.html">
+    <div class="nav-link nav-link-dynamic">
+      <i class="fa-solid fa-address-book" style="color: #0f380f"></i>
+      <span class="nav-link-text">contact</span>
+    </div>
+  </a>
 </div>
