--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../assets/header.css" />
     <link rel="stylesheet" href="../assets/background-responsive.css" />
     <script src="../assets/script.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/98898d1e6d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="background-responsive"></div>
