--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../assets/styles.css" />
     <link rel="stylesheet" href="../assets/header.css" />
     <script src="../assets/script.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/98898d1e6d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="portfolio">
     <header id="header-nav"></header>
