about section text boxes copy and styling

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,129 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Rob</title>
+    <title>Rob Chapleski</title>
     <link rel="stylesheet" href="../assets/styles.css" />
     <link rel="stylesheet" href="../assets/header.css" />
+    <link rel="stylesheet" href="../assets/background-responsive.css" />
     <script src="../assets/script.js" defer></script>
     <script
       src="https://kit.fontawesome.com/98898d1e6d.js"
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="about">
+  <body>
+    <div id="background-responsive"></div>
     <header id="header-nav"></header>
-    <div class="body-text">
-      <h1 class="page-title">
-        This page will showcase some of the projects I am involved in. For now,
-        enjoy lorem ipsum!
-      </h1>
-      <section class="section">
-        <h2 class="section-title">Cycling</h2>
-        <div>
-          <div class="image-left">
-            <img
-              src="https://vigilant-lumiere-2756fa.netlify.app/images/biking.jpg"
-              alt="biking"
-            />
-          </div>
-          <div class="paragraph">
-            <p>
-              I promise there is a (tiny) bit more original content on the
-              <a href="./portfolio.html">career</a> page
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-          </div>
+    <div class="about body-container">
+      <section class="section-head content-box">
+        <h1>Middle-tech Master</h1>
+        <div class="section-text">
+          My hobbies gravitate to the wide line between the highs and lows of
+          technology. In this madly and rapidly advancing age of the
+          cutting-edge and next big technological breakthrough, I love finding
+          new places to toy with what are seen as today's basic and fundamental
+          elements, which themselves served as the technological forefront of
+          the recent past.
         </div>
       </section>
-      <section class="section">
-        <h2 class="section-title">Cycling</h2>
-        <div>
-          <div class="image-right">
-            <img
-              src="https://vigilant-lumiere-2756fa.netlify.app/images/biking.jpg"
-              alt="biking"
-            />
-          </div>
-          <div class="paragraph">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="section">
-        <h2 class="section-title">Cycling</h2>
-        <div>
-          <div class="image-left">
-            <img
-              src="https://vigilant-lumiere-2756fa.netlify.app/images/biking.jpg"
-              alt="biking"
-            />
-          </div>
-          <div class="paragraph">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-              iusto explicabo! Consequatur rerum vitae aperiam est quasi? A,
-              porro, ullam illo vitae nulla dolorum quis sapiente magnam facere
-              accusantium ipsum.
-            </p>
-          </div>
+      <section class="pixel-art content-box">
+        <h2>Pixel Art</h2>
+        <div class="section-text">
+          With precise control of the smallest bits of space and time, we can
+          build and tear down mountains. This is how I create-- one dot at a
+          time. Seurat spent his Sunday afternoons with points of paint on a
+          canvas. I like moving tiny squares around on the screen.
         </div>
       </section>
     </div>
