--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rob Chapleski</title>
+    <title>Long walks on the beach...</title>
     <link rel="stylesheet" href="../assets/styles.css" />
     <link rel="stylesheet" href="../assets/header.css" />
     <link rel="stylesheet" href="../assets/background-responsive.css" />
@@ -18,23 +18,126 @@
     <header id="header-nav"></header>
     <div class="about body-container">
       <section class="section-head content-box">
-        <h1>Middle-tech Master</h1>
+        <h1>Meddling in the Middle-Tech</h1>
         <div class="section-text">
-          My hobbies gravitate to the wide line between the highs and lows of
-          technology. In this madly and rapidly advancing age of the
-          cutting-edge and next big technological breakthrough, I love finding
-          new places to toy with what are seen as today's basic and fundamental
-          elements, which themselves served as the technological forefront of
-          the recent past.
+          My hobbies gravitate together the highs and lows of technology. In
+          this madly and rapidly advancing age of the cutting-edge and next big
+          technological breakthrough, I love finding new comfortable places to
+          toy with what are seen as today's basic and fundamental elements,
+          which themselves served as the technological forefront of the recent
+          past.
         </div>
       </section>
       <section class="pixel-art content-box">
         <h2>Pixel Art</h2>
         <div class="section-text">
           With precise control of the smallest bits of space and time, we can
-          build and tear down mountains. This is how I create-- one dot at a
-          time. Seurat spent his Sunday afternoons with points of paint on a
-          canvas. I like moving tiny squares around on the screen.
+          erect and erode entire universes. This is how I create-- one bit at a
+          time. Seurat spent his Sunday afternoons with tiny points of paint on
+          a canvas. I like moving tiny squares around your screen.
+        </div>
+        <div class="section-text">For instance:</div>
+        <div class="animation-gallery">
+          <div class="image-frame">
+            <img
+              src="../assets/images/stranger-on-the-shore.GIF"
+              alt="pixel animation entitled Stranger on the Shore"
+            />
+            <p class="image-caption">Stranger on the Shore</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/hello-world.GIF"
+              alt="pixel animation entitled Hello World"
+            />
+            <p class="image-caption">Hello, World!</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/dinokun.GIF"
+              alt="pixel animation entitled Dinokun"
+            />
+            <p class="image-caption">Dinokun</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/death-by-escalator.GIF"
+              alt="pixel animation entitled Death by Esccalator"
+            />
+            <p class="image-caption">Death by Escalator</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/ephemeral-childhood-drawing.GIF"
+              alt="pixel animation entitled Ephemeral Childhood Drawing"
+            />
+            <p class="image-caption">Ephemeral Childhood Drawing</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/night-and-day.GIF"
+              alt="pixel animation entitled Night and Day"
+            />
+            <p class="image-caption">Night and Day</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/pipes.GIF"
+              alt="pixel animation entitled Pipes"
+            />
+            <p class="image-caption">Pipes</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/seafoam.GIF"
+              alt="pixel animation entitled Seafoam"
+            />
+            <p class="image-caption">Seafoam</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/snowtoad-shuffle.GIF"
+              alt="pixel animation entitled Snowtoad Shuffle"
+            />
+            <p class="image-caption">Snowtoad Shuffle</p>
+          </div>
+        </div>
+      </section>
+      <section class="ham-radio content-box">
+        <h2>Amateur Radio</h2>
+        <div class="section-text">
+          Yes, THAT ham. Amateur Extra, call sign: KY4ZO.
+        </div>
+        <div class="section-text">
+          Light waves are freaking cool. Ripples of energy flinging through
+          space letting us do all kinds of crazy things. The more we understand
+          about them, the more we can do with them. Me? I particularly like
+          APRS, the sending of digital packets over radio waves. Think GPS
+          positioning reports, or text messaging. Just like your phone, but with
+          technical control over every part of the process.
+        </div>
+        <div class="section-text">
+          If I've operated my APRS station recently, you can see what I've been
+          up to
+          <a class="link-button" href="https://aprs.fi/KY4ZO-7" target="_blank"
+            >here!</a
+          >
+        </div>
+      </section>
+      <section class="retro-games content-box">
+        <h2>Single Board Computing and Retro Gaming</h2>
+        <div class="section-text">
+          I like to tinker with the magic I grew up around. (Don't tell me you
+          weren't fascinated by cash registers as a child!) My idea of a good
+          side-project (and ebay haul) has me starting with an thermal receipt
+          printer and a RaspberryPi and ending up with a wifi-connected, AirPlay
+          enabled greyscale thermal shopping-list and photo printer.
+        </div>
+        <div class="section-text">
+          Speaking of magic I grew up around-- my taste in video games remains
+          the same as it always has been-- 2D, blocky, platforming, puzzlers all
+          the way. Mario, Sonic, Tetris. My favorite game of all time? Link's
+          Awakening for Game Boy.
         </div>
       </section>
     </div>
