--- a/pages/index.html
+++ b/pages/index.html
@@ -17,7 +17,8 @@
     <div id="background-responsive"></div>
     <header id="header-nav"></header>
     <div class="home body-container">
-      <div class="content-box"></div>
+      <div class="content-box">
+      </div>
     </div>
     <footer id="footer-nav"></footer>
   </body>
