adding more animations to about and media queries for gallery

--- a/pages/about.html
+++ b/pages/about.html
@@ -89,6 +89,27 @@
           </div>
           <div class="image-frame">
             <img
+              src="../assets/images/links-awakening-map.GIF"
+              alt="pixel animation entitled Link's Awakening Map"
+            />
+            <p class="image-caption">Link's Awakening Map</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/Tamamorph-reverse.GIF"
+              alt="pixel animation entitled Tamamorph Reverse"
+            />
+            <p class="image-caption">Tamamorph</p>
+          </div>
+          <div class="image-frame">
+            <img
+              src="../assets/images/a-cursive-hello.GIF"
+              alt="pixel animation entitled A Cursive Hello"
+            />
+            <p class="image-caption">A Cursive Hello</p>
+          </div>
+          <div class="image-frame">
+            <img
               src="../assets/images/seafoam.GIF"
               alt="pixel animation entitled Seafoam"
             />
