adding my contacts and updating link button styling

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,17 +6,80 @@
     <title>Best way to reach you?</title>
     <link rel="stylesheet" href="../assets/styles.css" />
     <link rel="stylesheet" href="../assets/header.css" />
+    <link rel="stylesheet" href="../assets/background-responsive.css" />
     <script src="../assets/script.js" defer></script>
     <script
       src="https://kit.fontawesome.com/98898d1e6d.js"
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="home">
+  <body>
+    <div id="background-responsive"></div>
     <header id="header-nav"></header>
-    <div class="body-text">
-      <p>Hello!</p>
-      <p>input will go here.... someday...</p>
+    <div class="contact body-container">
+      <section class="section-head content-box">
+        <h1>Contact</h1>
+      </section>
+      <section class="get-contact content-box">
+        <h2>Follow You</h2>
+        <div class="section-text">
+          Yes, THAT ham. Amateur Extra, call sign: KY4ZO.
+        </div>
+        <div class="section-text">
+          Light waves are freaking cool. Ripples of energy flinging through
+          space letting us do all kinds of crazy things. The more we understand
+          about them, the more we can do with them. Me? I particularly like
+          APRS, the sending of digital packets over radio waves. Think GPS
+          positioning reports, or text messaging. Just like your phone, but with
+          technical control over every part of the process.
+        </div>
+        <div class="section-text">
+          If I've operated my APRS station recently, you can see what I've been
+          up to
+          <a class="link-button" href="https://aprs.fi/KY4ZO-7" target="_blank"
+            >here!</a
+          >
+        </div>
+      </section>
+      <section class="my-contact content-box">
+        <h2>Follow Me</h2>
+        <div class="section-text">
+          Email:
+          <a
+            class="link-button"
+            href="mailto:Chapleski17@gmail.com?subject=Hey! I like your webpage!"
+            >Chapleski17@gmail.com</a
+          >
+        </div>
+        <div class="section-text">
+          Linkedin:
+          <a
+            class="link-button"
+            href="https://www.linkedin.com/in/robert-chapleski/"
+            target="_blank"
+            >Rob Chapleski, Ph.D.</a
+          >
+        </div>
+        <div class="section-text">
+          Github:
+          <a
+            class="link-button"
+            href="https://github.com/rccolamachine/"
+            target="_blank"
+            >rccolamachine</a
+          >
+        </div>
+
+        <div class="section-text">
+          Twitch:
+          <a
+            class="link-button"
+            href="https://www.twitch.tv/atomicgecko7"
+            target="_blank"
+            >atomicgecko7</a
+          >
+        </div>
+      </section>
     </div>
     <footer id="footer-nav"></footer>
   </body>
