contact page links, forms. submitted page

--- a/pages/about.html
+++ b/pages/about.html
@@ -140,9 +140,7 @@
         <div class="section-text">
           If I've operated my APRS station recently, you can see what I've been
           up to
-          <a class="link-button" href="https://aprs.fi/KY4ZO-7" target="_blank"
-            >here!</a
-          >
+          <a class="link-button" href="#" id="aprs-button">here!</a>
         </div>
       </section>
       <section class="retro-games content-box">
