--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,24 +22,46 @@
       </section>
       <section class="get-contact content-box">
         <h2>Follow You</h2>
-        <div class="section-text">
-          Yes, THAT ham. Amateur Extra, call sign: KY4ZO.
-        </div>
-        <div class="section-text">
-          Light waves are freaking cool. Ripples of energy flinging through
-          space letting us do all kinds of crazy things. The more we understand
-          about them, the more we can do with them. Me? I particularly like
-          APRS, the sending of digital packets over radio waves. Think GPS
-          positioning reports, or text messaging. Just like your phone, but with
-          technical control over every part of the process.
-        </div>
-        <div class="section-text">
-          If I've operated my APRS station recently, you can see what I've been
-          up to
-          <a class="link-button" href="https://aprs.fi/KY4ZO-7" target="_blank"
-            >here!</a
-          >
-        </div>
+        <form class="your-contact" action="./submitted.html">
+          <div class="section-text">
+            <label for="fullname">Name:</label>
+            <input
+              type="text"
+              id="fullname"
+              name="fullname"
+              placeholder="type name here now."
+            />
+          </div>
+          <div class="section-text">
+            <label for="email">Email:</label>
+            <input
+              type="text"
+              id="email"
+              name="email"
+              placeholder="then type email here."
+            />
+          </div>
+          <div class="your-message section-text">
+            <label for="message">Message: </label>
+            <textarea
+              type="text"
+              id="message"
+              name="message"
+              placeholder="then tell me more about my eyes here."
+              rows="2"
+              cols="50"
+            ></textarea>
+          </div>
+          <div class="section-text">
+            <label for="send-info">Submit:</label>
+            <input
+              type="submit"
+              id="send-info"
+              name="send-info"
+              value="then click here."
+            />
+          </div>
+        </form>
       </section>
       <section class="my-contact content-box">
         <h2>Follow Me</h2>
