cleaning up styling on submitted and button in about

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,9 @@
     <div class="about body-container">
       <section class="section-head content-box">
         <h1>Meddling in the Middle-Tech</h1>
-        <div class="section-text">
+      </section>
+      <section class="content-box">
+        <div class="section-description section-text">
           My hobbies gravitate together the highs and lows of technology. In
           this madly and rapidly advancing age of the cutting-edge and next big
           technological breakthrough, I love finding new comfortable places to
@@ -140,7 +142,9 @@
         <div class="section-text">
           If I've operated my APRS station recently, you can see what I've been
           up to
-          <a class="link-button" href="#" id="aprs-button">here!</a>
+          <a class="link-button" href="https://aprs.fi/KY4ZO-7" target="_blank"
+            >here!</a
+          >
         </div>
       </section>
       <section class="retro-games content-box">
