--- a/pages/submitted.html
+++ b/pages/submitted.html
@@ -16,8 +16,13 @@
   <body>
     <div id="background-responsive"></div>
     <header id="header-nav"></header>
-    <div class="home body-container">
-      <h2 class="content-box">Thank you for your submission!</h2>
+    <div class="submitted body-container">
+      <section class="content-box">
+        <h2>Thank you for your submission!</h2>
+        <button class="link-button" onclick="history.back()" id="go-back">
+          Go Back
+        </button>
+      </section>
     </div>
     <footer id="footer-nav"></footer>
   </body>
