adjusting portfolio content head div

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -19,7 +19,9 @@
     <div class="career body-container">
       <section class="section-head content-box">
         <h1>I've Been Everywhere, Man.</h1>
-        <div class="section-text">
+      </section>
+      <section class="content-box">
+        <div class="section-description section-text">
           My hobbies gravitate together the highs and lows of technology. In
           this madly and rapidly advancing age of the cutting-edge and next big
           technological breakthrough, I love finding new comfortable places to
