adding placeholder text, deleting old files, removing extra css

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,8 +17,21 @@
     <div id="background-responsive"></div>
     <header id="header-nav"></header>
     <div class="home body-container">
-      <div class="content-box">
-      </div>
+      <section class="section-head content-box">
+        <h1>Hi, I'm Rob.</h1>
+      </section>
+      <section class="content-box">
+        <div class="section-description section-text">
+          Welcome to my site. Sometime soon, I'm going to put something pretty
+          nifty here. Haven't figured out just what it is yet, but I will; don't
+          you worry. Sorry for any disillusionment this may have imparted.
+          Please go ahead and take a look around the rest of the site. There is
+          still some work to do elsewhere, especially in terms of personal
+          content. But the layout and interactivity of the site is at least
+          functional, and I think it's pretty neat. It was a lot of fun to put
+          together.
+        </div>
+      </section>
     </div>
     <footer id="footer-nav"></footer>
   </body>
