--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,12 +22,14 @@
       </section>
       <section class="content-box">
         <div class="section-description section-text">
-          My hobbies gravitate together the highs and lows of technology. In
-          this madly and rapidly advancing age of the cutting-edge and next big
-          technological breakthrough, I love finding new comfortable places to
-          toy with what are seen as today's basic and fundamental elements,
-          which themselves served as the technological forefront of the recent
-          past.
+          The personal copy on this page looks a lot like that on the About
+          page. That's because I copied and pasted it. I am using it as a
+          placeholder, and I will update it when I get around to it. My hobbies
+          gravitate together the highs and lows of technology. In this madly and
+          rapidly advancing age of the cutting-edge and next big technological
+          breakthrough, I love finding new comfortable places to toy with what
+          are seen as today's basic and fundamental elements, which themselves
+          served as the technological forefront of the recent past.
         </div>
       </section>
       <section class="retro-games content-box">
